--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>GeoCheck - Employee Attendance</title>
+  <title>ISECheck - Employee Attendance</title>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
