Change title from 'GeoCheck' to 'ISECheck'

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                 <div className="bg-blue-600 text-white p-4 rounded-2xl inline-block mb-4 shadow-lg shadow-blue-500/30">
                   <Icons.CheckCircle size={48} />
                 </div>
-                <h1 className="text-3xl font-bold text-slate-800">GeoCheck</h1>
+                <h1 className="text-3xl font-bold text-slate-800">ISECheck</h1>
                 <p className="text-slate-500">Employee Attendance System</p>
               </div>
 
