Change GeoCheck to ISECheck in header

--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
               <header className="bg-white border-b border-slate-200 sticky top-0 z-30 shadow-sm">
                 <div className="max-w-md mx-auto px-4 h-16 flex items-center justify-between">
                   <div className="flex items-center font-bold text-lg text-slate-800">
-                    <Icons.CheckCircle className="text-blue-600 mr-2" size={24} /> GeoCheck
+                    <Icons.CheckCircle className="text-blue-600 mr-2" size={24} /> ISECheck
                   </div>
                   <div className="flex items-center">
                     <span className="text-sm font-medium mr-3 text-slate-600 hidden sm:block">
