Update apiSecret from ISE_CHECKIN_TOKEN to SE_CHECKIN_TOKEN

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       const [config, setConfig] = useState({
         // ✅ Option A
         apiUrl: "https://script.google.com/macros/s/AKfycbymv5EdFfcaPmCMInlCkW08AMxQbEJdMTHiIdKsClC4-3BbKZ1APetifyg7BrhQzv-nWA/exec",
-        apiSecret: "ISE_CHECKIN_TOKEN",
+        apiSecret: "SE_CHECKIN_TOKEN",
 
         // optional config sheet (not required)
         sheetUrl: "https://docs.google.com/spreadsheets/d/1MJr9cfp0FUyKqRZNX9ggM82XOSXPcn5zebjRV6zlePs/export?format=csv",
