--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
     async function apiPost(payload) {
       const res = await fetch(API_URL, {
         method: "POST",
-        headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ ...payload, secret: SECRET }),
+        redirect: "follow",
       });
       const text = await res.text();
       let data;
-      try { data = JSON.parse(text); } catch { data = { ok:false, error:"Invalid JSON from server", raw:text }; }
+      try { data = JSON.parse(text); } 
+      catch { data = { ok:false, error:"Invalid JSON from server", raw:text }; }
       return data;
     }
 
