Rename project from GeoCheck to ISECheckIN

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>GeoCheck - Employee Attendance</title>
+  <title>ISECheckIN - Employee Attendance</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
@@ -453,7 +453,7 @@
                   <div className="inline-block bg-blue-600 text-white p-4 rounded-2xl shadow-lg shadow-blue-500/30 mb-3">
                     <Icons.CheckCircle size={44} />
                   </div>
-                  <h1 className="text-3xl font-extrabold text-slate-800">GeoCheck</h1>
+                  <h1 className="text-3xl font-extrabold text-slate-800">ISE Check-in</h1>
                   <p className="text-slate-500">Employee Attendance System</p>
                 </div>
 
