--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
               <header className="bg-white border-b border-slate-200 sticky top-0 z-30 shadow-sm">
                 <div className="max-w-md mx-auto px-4 h-16 flex items-center justify-between">
                   <div className="flex items-center font-extrabold text-lg text-slate-800">
-                    <Icons.CheckCircle className="text-blue-600 mr-2" size={22} /> GeoCheck
+                    <Icons.CheckCircle className="text-red-600 mr-2" size={22} /> ISE Check-in
                   </div>
                   <div className="flex items-center gap-3">
                     <div className="text-right hidden sm:block">
