Add location for Eng Bldg 1

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         maxLateMinutes: 180,
         locations: [
           { name: "ISE_Headquarters", lat: 13.73656068, lng: 100.5333925, radius: 30 },
+          { name: "Eng Bldg 1", lat: 13.736649190639286, lng: 100.53261809104578, radius: 30 },
           { name: "ChulaPat_14",      lat: 13.74406954, lng: 100.525551,  radius: 30 },
         ],
       });
